# fire-risk-engine

./: .gitignore  FireRiskEngine.pptx  README.md  command_center_pacman.html  context.docx  convert_html_to_jsx.py  databricks.yml  db context.docx  fix_clay.py  fix_jsx.py  fix_ts.py  operations_pacman.html  remove_icons.py  scratch_download.py  simulation_pacman.html  write_pages.py  write_roadmap.py  🎤 FULL PPT SCRIPT.docx
backend/: .env.example  debug_twilio.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  repositories.py  snapshot_builder.py
backend/app/api/: chat.py
backend/app/clients/: databricks.py  gemini_client.py  openai_client.py  universal_ai_client.py
backend/app/core/: config.py  runtime_metrics.py  snapshot_cache.py  websocket_hub.py
backend/app/data/: districts.py
backend/app/models/: contracts.py
backend/app/services/: ai_service.py  chat_service.py  executionerplanner.py  optimization_service.py  query_optimizer.py  report_service.py  risk_intelligence.py  roadmap_service.py  sos_service.py  utils.py
backend/tests/: test_config.py  test_optimization.py  test_report_service.py  test_risk_intelligence.py  test_roadmap_service.py  test_runtime_bootstrap.py  test_snapshot_builder.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useDashboard.ts  useLiveSocket.ts
frontend/src/lib/: api.ts
frontend/test-results/: .last-run.json
frontend/test-results/pw-temp-operations-and-sim-d7779-s-stay-connected-to-backend-chromium/: error-context.md
(+20 files in other folders)
