[project]
name = "fire-risk-backend"
version = "0.1.0"
description = "Lightweight FastAPI backend for Fire Risk Prevention & Response Optimization"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "google-genai>=1.0.0",
  "openai>=1.90.0",
  "psutil>=7.0.0",
  "reportlab>=4.4.0",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
